@@ -1,9 +1,13 @@
- FLa4a 1.6.5:
+ FLa4a 1.6.x:
 
  NEW FEATURES
 
 - Likelihood is now returned by component
 - sca.sa and sep.sa functions to make sca() available to the mp function in the mse package
+
+	BUG FIXES:
+- Centering was not properly reported for MCMCM qmodels
+
 
  FLa4a 1.0.0:
 
